重複チェックのプリントデバックコードの削除