@@ -4,7 +4,6 @@ import java.time.LocalDateTime;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import raisetech.StudentManagement.data.Student;
@@ -32,17 +31,14 @@ public class StudentService {
 
   public void registerStudent(StudentDetail studentDetail) {
     repository.registerStudent(studentDetail.getStudent());
-    System.out.println("Generated Student ID: " + studentDetail.getStudent().getStudentId());
   }
 
   public void registerStudentCourse(StudentDetail studentDetail) {
 
-    // ここが怪しいか？
     for (StudentCourse studentCourse : studentDetail.getStudentCourses()) {
       studentCourse.setStudentId(studentDetail.getStudent().getStudentId());
       studentCourse.setStartDate(LocalDateTime.now());
       studentCourse.setExpectedEndDate(LocalDateTime.now().plusYears(1));
-      System.out.println(studentDetail.getStudentCourses());
     }
     repository.registerStudentCourses(studentDetail.getStudentCourses());
   }
@@ -50,11 +46,10 @@ public class StudentService {
   public boolean hasDuplicateCourses(StudentDetail studentDetail) {
     List<String> courseNames = studentDetail.getStudentCourses().stream()
         .map(StudentCourse::getCourseName)
-        .collect(Collectors.toList());
+        .toList();
 
     // 重複チェック
     Set<String> uniqueCourses = new HashSet<>(courseNames);
     return uniqueCourses.size() != courseNames.size();
   }
-
 }
